# funlead-recorder

./: .env.example  .gitignore  .gitleaks.toml  .private-secret-patterns.example  CONTRIBUTING.md  MIGRACION-yoom-a-oss.md  README.md  SECURITY.md  lefthook.yml  package.json
.github/workflows/: privacy-gate.yml  release.yml
apps/desktop/: camera.html  controls.html  index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  app.css  branding.ts  camera.css  camera.tsx  controls.tsx  editor-io.ts  settings.ts  tauri-api.ts  upload.ts
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: FONT-LICENSE.md
apps/desktop/src-tauri/src/: audio.rs  camera.rs  controls.rs  ffmpeg.rs  lib.rs  main.rs  project.rs  recorder.rs  render.rs  transcribe.rs
apps/web/: package.json
apps/web/prisma/: schema.prisma
apps/web/prisma/migrations/0_init/: migration.sql
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: LogoutButton.tsx  page.tsx
apps/web/src/app/login/: LoginForm.tsx  page.tsx
apps/web/src/components/recordings/: CommentsInbox.tsx  DeviceSelector.tsx  FunLeadFooter.tsx  PasswordGate.tsx  PublicComments.tsx  Recorder.tsx  RecordingCtaLink.tsx  RecordingPreview.tsx  StatCountUp.tsx  (+4 more)
apps/web/src/lib/: auth.ts  blob-url.ts  guard.ts  rate-limit.ts  tokens.ts
apps/web/src/types/: document-pip.d.ts
scripts/: fetch-ffmpeg.sh  fetch-whisper.sh  secret-scan.sh
(+32 files in other folders)
