[package]
name = "funlead-recorder"
version = "0.0.0"
description = "FunLead Recorder — local-first screen recorder (Tauri v2)"
authors = ["Antonio Rivero Toledo"]
edition = "2021"
rust-version = "1.85"

[lib]
name = "funlead_recorder"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scap = { git = "https://github.com/CapSoftware/scap", rev = "c03f15a4631f40cd8d2e36807befb83b314cfeb7" }
ffmpeg-sidecar = "2.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cpal = "0.17"
hound = "3.5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[lints.rust]
# objc 0.2's msg_send! macro expands `cfg!(feature = "cargo-clippy")`, which
# Rust 1.80+ flags as an unexpected cfg under clippy. Declare it as known so the
# lint stays quiet without touching camera.rs (a third-party macro artifact).
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
